--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Fixed navbar -->
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <img id="skyline" src="images/footer.png">
+      <img id="skyline" src="images/Footer.png">
       <div class="container">
         
         <div class="navbar-header">
