Initial HTML structure complete minus mobile

--- a/about.html
+++ b/about.html
@@ -62,8 +62,8 @@
           <img class="pull-left" src="images/cancer-ribbon-cervical.png">
           <img class="pull-left" src="images/cancer-ribbon-pancreatic.png">
           <ul class="nav navbar-nav pull-right">
-            <li class="active"><a href="index.html"><img src="images/basketballHome.png"></a></li>
-            <li><a href="about.html"><img src="images/basketballAbout.png"></a></li>
+            <li><a href="index.html"><img src="images/basketballHome.png"></a></li>
+            <li class="active"><a href="about.html"><img src="images/basketballAbout.png"></a></li>
             <li><a href="events.html"><img src="images/basketballEvents.png"></a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img src="images/basketballContact.png"></a>
