--- a/volunteer.html
+++ b/volunteer.html
@@ -62,10 +62,10 @@
           <img class="pull-left" src="images/cancer-ribbon-cervical.png">
           <img class="pull-left" src="images/cancer-ribbon-pancreatic.png">
           <ul class="nav navbar-nav pull-right">
-            <li class="active"><a href="index.html"><img src="images/basketballHome.png"></a></li>
+            <li><a href="index.html"><img src="images/basketballHome.png"></a></li>
             <li><a href="about.html"><img src="images/basketballAbout.png"></a></li>
             <li><a href="events.html"><img src="images/basketballEvents.png"></a></li>
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img src="images/basketballContact.png"></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="register.html">register in our forum</a></li>
