changed non-profit designation

--- a/mailing.html
+++ b/mailing.html
@@ -127,7 +127,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <p>Ballin' For A Cure is a non-profit 403(c) organization</p>
+            <p>Ballin' For A Cure is a non-profit 501(c)(3) organization</p>
           </div>
           <div class="col-md-4">
             <p>Designed with love by <a target="_blank" href="http://www.doyleware.com">Doyleware|Designs</a></p>
