added homepage content

--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@
 
     <div class="container content">
       <div class="page-header">
-        <h1>Sticky footer with fixed navbar</h1>
+        <h1>Doing our part to help find a cure for cancer</h1>
       </div>
-      <button class="btn btn-warning">test</button>
-      <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>body > .container</code>.</p>
-      <p>Back to <a href="../sticky-footer">the default sticky footer</a> minus the navbar.</p>
+      
+      <p class="lead">The Ballin For A Cure association is a non-profit organization that holds various fund raising events through out the year and donates the proceeds to the American Cancer Society.  Our biggest event is the annual Ballin' For A Cure's local Basketball Tournament.</p>
+      <p class="lead">If you would like to help out and volunteer for an upcoming event or just donate money to help fight cancer, the BFAC association, the ACS and everyone who's lives have been touched by cancer would love to say thank you and let you know you are not alone in your fight against one of lifes greatest opponents.</p>
+      <button class="btn btn-success">Sign Up</button>
     </div>
 
     <footer class="footer">
