changed some links, added nav animation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- Javascript files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+     <script src="js/main.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -62,11 +63,11 @@
           <img class="pull-left" src="images/cancer-ribbon-cervical.png">
           <img class="pull-left" src="images/cancer-ribbon-pancreatic.png">
           <ul class="nav navbar-nav pull-right">
-            <li class="active"><a href="index.html"><img src="images/basketballHome.png"></a></li>
-            <li><a href="about.html"><img src="images/basketballAbout.png"></a></li>
-            <li><a href="events.html"><img src="images/basketballEvents.png"></a></li>
+            <li class="active"><a href="index.html"><img class="nav-ball" src="images/basketballHome.png"></a></li>
+            <li><a href="about.html"><img  class="nav-ball" src="images/basketballAbout.png"></a></li>
+            <li><a href="events.html"><img  class="nav-ball" src="images/basketballEvents.png"></a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img src="images/basketballContact.png"></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img  class="nav-ball" src="images/basketballContact.png"></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="register.html">register in our forum</a></li>
                 <li><a href="mailing.html">Join our mailing list</a></li>
@@ -75,7 +76,7 @@
                 <li class="dropdown-header">SOCIAL LINKS</li>
                 <li><a href="https://www.facebook.com/BallinForACure?fref=ts" target="_blank">Facebook</a></li>
                 <li><a href="#">twitter</a></li>
-                <li><a href="www.cancer.org" target="_blank">american cancer society</a></li>
+                <li><a href="http://www.cancer.org" target="_blank">american cancer society</a></li>
               </ul>
             </li>
           </ul>
@@ -95,7 +96,7 @@
       
       <p class="lead">The Ballin For A Cure association is a non-profit organization that holds various fund raising events through out the year and donates the proceeds to the American Cancer Society.  Our biggest event is the annual Ballin' For A Cure's local Basketball Tournament.</p>
       <p class="lead">If you would like to help out and volunteer for an upcoming event or just donate money to help fight cancer, the BFAC association, the ACS and everyone who's lives have been touched by cancer would love to say thank you and let you know you are not alone in your fight against one of lifes greatest opponents.</p>
-      <button class="btn btn-success">Sign Up</button>
+      <a class="btn btn-success btn-lg" role="button" href="mailing.html">Sign Up</a>
     </div>
 
     <footer class="footer">
@@ -109,7 +110,7 @@
           </div>
           <div class="col-md-4">
             <ul class="footer-logos">
-              <li class="social-logo-li"><a href="www.cancer.org" target="_blank"><img src="images/ACS-logo.jpg"></a></li>
+              <li class="social-logo-li"><a href="http://www.cancer.org" target="_blank"><img src="images/ACS-logo.jpg"></a></li>
               <li class="social-logo-li"><a href="https://www.facebook.com/BallinForACure?fref=ts" target="_blank"><img src="images/facebook.png"></a></li>
               <li class="social-logo-li"><a href="#"><img src="images/twitter.png"></a></li>
             </ul>
