--- a/mailing.html
+++ b/mailing.html
@@ -62,11 +62,11 @@
           <img class="pull-left" src="images/cancer-ribbon-cervical.png">
           <img class="pull-left" src="images/cancer-ribbon-pancreatic.png">
           <ul class="nav navbar-nav pull-right">
-            <li><a href="index.html"><img src="images/basketballHome.png"></a></li>
-            <li><a href="about.html"><img src="images/basketballAbout.png"></a></li>
-            <li><a href="events.html"><img src="images/basketballEvents.png"></a></li>
+            <li><a href="index.html"><img class="nav-ball" src="images/basketballHome.png"></a></li>
+            <li><a href="about.html"><img class="nav-ball" src="images/basketballAbout.png"></a></li>
+            <li><a href="events.html"><img class="nav-ball" src="images/basketballEvents.png"></a></li>
             <li class="dropdown active">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img src="images/basketballContact.png"></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img class="nav-ball" src="images/basketballContact.png"></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="register.html">register in our forum</a></li>
                 <li><a href="mailing.html">Join our mailing list</a></li>
@@ -90,33 +90,33 @@
 
     <div class="container content">
       <div class="page-header">
-        <h1>Sticky footer with fixed navbar</h1>
+        <h1>THIS SECTION IS STILL UNDER CONSTRUCTION</h1>
       </div>
       <div class="row">
         <div class="col-md-8 col-md-offset-2">                        
               <form id="contactform" name="contactform" method="post" action="send_form_email.php"> 
-                <div>        
+                <div class="form-group">        
                   <label for="first_name">First Name *</label>             
                   <input  type="text" name="first_name" maxlength="50" size="30">      
                 </div>           
-                <div>        
+                <div class="form-group">        
                   <label for="last_name">Last Name *</label>
                   <input  type="text" name="last_name" maxlength="50" size="30">      
                 </div>   
-                <div>                                   
+                <div class="form-group">                                   
                   <label for="email">Email Address *</label>  
                   <input  type="text" name="email" maxlength="80" size="30">      
                 </div>   
-                <div>                          
+                <div class="form-group">                          
                   <label for="telephone">Telephone Number</label>
                   <input  type="text" name="telephone" maxlength="30" size="30">      
                 </div>   
-                <div>
+                <div class="form-group">
                   <label for="comments">Comments *</label>     
                   <textarea  name="comments" maxlength="1000" cols="25" rows="4"></textarea>   
                 </div>   
-                <div>                          
-                  <input type="submit" value="Submit" id="submit">             
+                <div class="form-group">                          
+                  <input type="submit" value="Submit" id="submit" class="btn btn-success">             
                 </div>                         
               </form>            
           </div><!--col-md-8-->
