--- a/about.html
+++ b/about.html
@@ -62,11 +62,11 @@
           <img class="pull-left" src="images/cancer-ribbon-cervical.png">
           <img class="pull-left" src="images/cancer-ribbon-pancreatic.png">
           <ul class="nav navbar-nav pull-right">
-            <li><a href="index.html"><img src="images/basketballHome.png"></a></li>
-            <li class="active"><a href="about.html"><img src="images/basketballAbout.png"></a></li>
-            <li><a href="events.html"><img src="images/basketballEvents.png"></a></li>
+            <li><a href="index.html"><img class="nav-ball" src="images/basketballHome.png"></a></li>
+            <li class="active"><a href="about.html"><img class="nav-ball" src="images/basketballAbout.png"></a></li>
+            <li><a href="events.html"><img class="nav-ball" src="images/basketballEvents.png"></a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img src="images/basketballContact.png"></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img class="nav-ball" src="images/basketballContact.png"></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href="register.html">register in our forum</a></li>
                 <li><a href="mailing.html">Join our mailing list</a></li>
@@ -88,13 +88,11 @@
     
 
 
-    <div class="container content">
+     <div class="container content">
       <div class="page-header">
-        <h1>Sticky footer with fixed navbar</h1>
+        <h1>SORRY, this section is still</h1>
       </div>
-      <button class="btn btn-warning">test</button>
-      <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>body > .container</code>.</p>
-      <p>Back to <a href="../sticky-footer">the default sticky footer</a> minus the navbar.</p>
+      <img class="construct" src="images/under-construction.gif">
     </div>
 
     <footer class="footer">
